samples/_failures_safe/1761377275_6fae17_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35f88264.c: In function ‘tokenize’:
./samples/SAFE/__tmp_35f88264.c:155:25: error: ‘lex’ undeclared (first use in this function); did you mean ‘lexer’?
  155 |             read_number(lex
      |                         ^~~
      |                         lexer
./samples/SAFE/__tmp_35f88264.c:155:25: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_35f88264.c:155:28: error: expected ‘)’ at end of input
  155 |             read_number(lex
      |                        ~   ^
      |                            )
./samples/SAFE/__tmp_35f88264.c:155:13: error: expected declaration or statement at end of input
  155 |             read_number(lex
      |             ^~~~~~~~~~~
./samples/SAFE/__tmp_35f88264.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_35f88264.c:155:13: error: expected declaration or statement at end of input
